New title entry

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,1 @@
-<div style="text-align: center;"><img src="images/drb_header.png"></div>
+<div style="text-align: center;"><img src="images/drb_test_header.png"></div>
