Adding link to image

--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,1 @@
-<div style="text-align: center;"><a href="mailto:dbowers@aphelioncreative.com"><img src="images/drb_test_header.png"></a></div>
-
+<div style="text-align: center;"><a href="mailto:dbowers@aphelioncreative.com"><img src="images/drb_website2sml.png"></a></div>
