change to header link

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,1 @@
-<div style="text-align: center;"><a href="mailto:dbowers@aphelioncreative.com"><img src="images/drb_website_revis.png"></a></div>
+<div style="text-align: center;"><a href="http://devanbowers.wordpress.com"><img src="images/drb_website_revis.png"></a></div>
