--- a/public/index.html
+++ b/public/index.html
@@ -86,11 +86,11 @@
               <div class="col-md-12">
                 <h1 class="section-title animate"
                 data-delay="0">
-                  We Are Web Developer
+                  Devan Bowers
                 </h1>
                 <p class="section-sub-title animate"
                 data-delay="50">
-                  Our Website Is Under Construction
+                  Pardon the dust.
                 </p>
               </div>
             </div>
@@ -101,30 +101,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-sm-offset-3">
-                <!-- countdown -->
-                <ul id="countdown" class="row">
-                  <li class="time-wrap col-xs-6 col-sm-3 animate"
-                  data-delay="100">
-                    <span class="time days">--</span>
-                    <p class="unit days_ref"></p>
-                  </li>
-                  <li class="time-wrap col-xs-6 col-sm-3 animate"
-                  data-delay="150">
-                    <span class="time hours">--</span>
-                    <p class="unit hours_ref"></p>
-                  </li>
-                  <li class="time-wrap col-xs-6 col-sm-3 animate"
-                  data-delay="200">
-                    <span class="time minutes">--</span>
-                    <p class="unit minutes_ref"></p>
-                  </li>
-                  <li class="time-wrap col-xs-6 col-sm-3 animate"
-                  data-delay="250">
-                    <span class="time seconds">--</span>
-                    <p class="unit seconds_ref"></p>
-                  </li>
-                </ul>
-                <!-- /countdown -->
+
               </div>
             </div>
           </div>
