update title content

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
                 </h1>
                 <p class="section-sub-title animate"
                 data-delay="50">
-                  Pardon the dust.
+                    Artist and Freelance UX Designer.
                 </p>
               </div>
             </div>
