update title content

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
                 </h1>
                 <p class="section-sub-title animate"
                 data-delay="50">
-                    Artist and Freelance UX Designer.
+                    Artist and UI/UX Designer.
                 </p>
               </div>
             </div>
@@ -376,106 +376,6 @@
       </div>
     </div>
     <!-- work end -->
-
-    <!-- pricing start -->
-    <div class="section" id="pricing">
-      <div class="section-entry">
-        <div class="section-heading">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6">
-                <h2 class="section-title animate"
-                data-delay="0">
-                  Our Plan
-                </h2>
-              </div>
-              <div class="col-md-6">
-                <p class="section-sub-title animate"
-                data-delay="50">
-                  Quisque elementum est massa, eu sodales velit commodo id. Aliquam orci magna, feugiat et interdum.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="section-content">
-          <div class="container">
-            <div class="row">
-
-              <!-- pricing table -->
-              <div class="col-md-4">
-                <div class="pricing-table animate"
-                data-delay="100">
-                  <div class="pricing-heading">
-                    <span class="plan">Standard</span>
-                    <span class="price">$29</span>
-                    <span class="sub">/ mo</span>
-                  </div>
-                  <ul>
-                    <li>20 Pages</li>
-                    <li>Personal Support</li>
-                    <li>Map Your Domain</li>
-                    <li>Fully Customize</li>
-                  </ul>
-                  <div class="pricing-footer">
-                    <a href="#" class="btn btn-cs btn-pricing">More Info</a>
-                  </div>
-                </div>
-              </div>
-              <!-- /pricing table -->
-
-              <!-- pricing table -->
-              <div class="col-md-4">
-                <div class="pricing-table active animate"
-                data-delay="150">
-                  <div class="pricing-heading">
-                    <span class="plan">Premium</span>
-                    <span class="price">$39</span>
-                    <span class="sub">/ mo</span>
-                  </div>
-                  <ul>
-                    <li>30 Pages</li>
-                    <li>Personal Support</li>
-                    <li>Map Your Domain</li>
-                    <li>Fully Customize</li>
-                  </ul>
-                  <div class="pricing-footer">
-                    <a href="#" class="btn btn-cs btn-pricing">More Info</a>
-                  </div>
-                </div>
-              </div>
-              <!-- /pricing table -->
-
-              <!-- pricing table -->
-              <div class="col-md-4">
-                <div class="pricing-table animate"
-                data-delay="200">
-                  <div class="pricing-heading">
-                    <span class="plan">Unlimited</span>
-                    <span class="price">$59</span>
-                    <span class="sub">/ mo</span>
-                  </div>
-                  <ul>
-                    <li>80 Pages</li>
-                    <li>Personal Support</li>
-                    <li>Map Your Domain</li>
-                    <li>Fully Customize</li>
-                  </ul>
-                  <div class="pricing-footer">
-                    <a href="#" class="btn btn-cs btn-pricing">More Info</a>
-                  </div>
-                </div>
-              </div>
-              <!-- /pricing table -->
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- pricing end -->
-
     <!-- contact start -->
     <div class="section" id="contact">
       <div class="section-entry">
