update title content

--- a/public/index.html
+++ b/public/index.html
@@ -118,13 +118,17 @@
               <div class="col-md-6">
                 <h2 class="section-title animate"
                 data-delay="0">
-                  About US
+                  About
                 </h2>
               </div>
               <div class="col-md-6">
                 <p class="section-sub-title animate"
                 data-delay="50">
-                  Quisque elementum est massa, eu sodales velit commodo id. Aliquam orci magna, feugiat et interdum.
+                  “When art is more than words, and pictures and dreams cease to restrain themselves to such surfaces, then you have something, then you’ve touched someone.” – Devan Bowers
+                  Devan Bowers is an inker, writer, and painter currently living and working in Santa Monica, California. Born in Tarzana, and raised in the Palm Springs area, Devan moved to Orange County in 2006 persuing studies in the Visual Design field.
+                  Having completed several personal projects and dabbling in environment concept art, Devan reconnected with his iconic style and pushed forward to perfect it.
+                  Harmonizing a blend of Art Nouveau, mandala symmetry, and the beauty of the female form, Devan’s work seeks to touch the very bottom of the viewers emotion.
+                  “I don’t believe in art that carries no ounce of emotion, no weight of feeling; These very ingredients are what make the world itself captivating and should be used in the very mixture of the media that touches your canvas.”
                 </p>
               </div>
             </div>
