--- a/public/index.html
+++ b/public/index.html
@@ -138,9 +138,7 @@
                 <blockquote class="animate"
                 data-delay="100">
                   <p>
-                    Devan Bowers is an inker, writer, and painter currently living and working in Santa Monica, California. Born in Tarzana, and raised in the Palm Springs area, Devan moved to Orange County in 2006 persuing studies in the Visual Design field.
-                    Having completed several personal projects and dabbling in environment concept art, Devan reconnected with his iconic style and pushed forward to perfect it.
-                    Harmonizing a blend of Art Nouveau, mandala symmetry, and the beauty of the female form, Devan’s work seeks to touch the very bottom of the viewers emotion.
+                    I am an Illustrator, Visual and Digital Designer, Freelance Artist, and Entrepreneur. I seek creative and intuitive minds across all industries and look to share the same. I have a background is design including collective knowledge of the Adobe Creative Suite and Autodesk's 3D Platforms.
                   </p>
                   <footer>
 
@@ -159,21 +157,28 @@
                 <!-- pregress bar -->
                 <div class="progress progress-lite">
                   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                    <h6>HTML <span>90%</span></h6>
+                    <h6>HTML/CSS <span>80%</span></h6>
                   </div>
                 </div>
 
                 <div class="progress progress-lite">
                   <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                    <h6>PHP <span>80%</span></h6>
+                    <h6>UI/UX Design <span>60%</span></h6>
                   </div>
                 </div>
 
                 <div class="progress progress-lite">
                   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                    <h6>Javascript <span>85%</span></h6>
+                    <h6>Adobe Creative Suite <span>90%</span></h6>
                   </div>
                 </div>
+
+                <div class="progress progress-lite">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                    <h6>Wireframe/Mockup <span>60%</span></h6>
+                  </div>
+                </div>
+
                 <!-- /pregress bar -->
 
               </div>
