update about page

--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
                     I am an Illustrator, Visual and Digital Designer, Freelance Artist, and Entrepreneur. I seek creative and intuitive minds across all industries and look to share the same. I have a background is design including collective knowledge of the Adobe Creative Suite and Autodesk's 3D Platforms.
                   </p>
                   <footer>
-
+Devan Bowers
                   </footer>
                 </blockquote>
               </div>
@@ -175,7 +175,7 @@
 
                 <div class="progress progress-lite">
                   <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                    <h6>Wireframe/Mockup <span>60%</span></h6>
+                    <h6>Wireframe/Mockups <span>60%</span></h6>
                   </div>
                 </div>
 
