update about page

--- a/public/index.html
+++ b/public/index.html
@@ -138,16 +138,16 @@
                 <blockquote class="animate"
                 data-delay="100">
                   <p>
-                    I am an Illustrator, Visual and Digital Designer, Freelance Artist, and Entrepreneur. I seek creative and intuitive minds across all industries and look to share the same. I have a background is design including collective knowledge of the Adobe Creative Suite and Autodesk's 3D Platforms.
-                  </p>
+                    Devan is a talented and creative professional. He knows how to work with the tools both physical and those in his creative head to help find a creative way to the finish line. He understands what it means to be professional as well, which is always refreshing in these industries.                  </p>
                   <footer>
-Devan Bowers
+Sean Carter, Graphic and Production Artist 2006
                   </footer>
                 </blockquote>
               </div>
               <div class="col-md-4">
                 <p class="animate"
                 data-delay="150">
+                  I am an Illustrator, Visual and Digital Designer, Freelance Artist, and Entrepreneur. I seek creative and intuitive minds across all industries and look to share the same. I have a background is design including collective knowledge of the Adobe Creative Suite and Autodesk's 3D Platforms.
 
                 </p>
               </div>
@@ -353,7 +353,6 @@ Devan Bowers
                   <li><a href="#" title="twitter" target="_blank"><i class="fa fa-twitter"></i></a></li>
                   <li><a href="#" title="google plus" target="_blank"><i class="fa fa-google-plus"></i></a></li>
                   <li><a href="#" title="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a href="#" title="behance" target="_blank"><i class="fa fa-behance"></i></a></li>
                 </ul>
                 <!-- /social link -->
 
