update about page

--- a/public/index.html
+++ b/public/index.html
@@ -138,9 +138,9 @@
                 <blockquote class="animate"
                 data-delay="100">
                   <p>
-                    Devan is a talented and creative professional. He knows how to work with the tools both physical and those in his creative head to help find a creative way to the finish line. He understands what it means to be professional as well, which is always refreshing in these industries.                  </p>
+                    "Devan is a talented and creative professional. He knows how to work with the tools both physical and those in his creative head to help find a creative way to the finish line. He understands what it means to be professional as well, which is always refreshing in these industries."                  </p>
                   <footer>
-Sean Carter, Graphic and Production Artist 2006
+Sean Carter, Graphic and Production Artist
                   </footer>
                 </blockquote>
               </div>
