update about page

--- a/public/index.html
+++ b/public/index.html
@@ -329,17 +329,17 @@ Sean Carter, Graphic and Production Artist
                 <address class="animate"
                 data-delay="150">
                   <i class="fa fa-mobile"></i>
-                  <span>(00) 123-4567890</span>
+                  <span>+1 (504)321-1337</span>
                 </address>
                 <address class="animate"
                 data-delay="200">
                   <i class="fa fa-map-marker"></i>
-                  <span>123 Street, City</span>
+                  <span>1538 Euclid St. Santa Monica, CA.</span>
                 </address>
                 <address class="animate"
                 data-delay="250">
                   <i class="fa fa-envelope-o"></i>
-                  <span>email@example.com</span>
+                  <span>dbowers@aphelioncreative.com</span>
                 </address>
 
                 <!-- social link -->
