--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,7 @@ Sean Carter, Graphic and Production Artist
               <div class="col-md-6">
                 <p class="section-sub-title animate"
                 data-delay="50">
-                  Quisque elementum est massa, eu sodales velit commodo id. Aliquam orci magna, feugiat et interdum.
+                  Illustration/Traditional Art
                 </p>
               </div>
             </div>
