move image files into the images folder
- img folder not configured to serve files

--- a/public/index.html
+++ b/public/index.html
@@ -15,30 +15,30 @@
 
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
 
-  <link rel="icon" href="img/favicon.jpg"> <!-- website icon -->
+  <link rel="icon" href="images/favicon.jpg"> <!-- website icon -->
 
 </head>
 
 <body>
 
-<div style="text-align: center"><img src="img/dbowers_main.png" style=width:95%;>
+<div style="text-align: center"><img src="images/dbowers_main.png" style=width:95%;>
 
 
-<a href="http://devanbowers.wordpress.com" target=_blank><img src="img/tr_icon.png" width="13%"></a>
-<a href="http://elysiumcollective.bigcartel.com/" target=_blank><img src="img/ill_icon.png" width="13%"></a>
-<a href="http://bowersixd.wordpress.com" target=_blank><img src="img/uiux_icon.png" width="13%"></a>
+<a href="http://devanbowers.wordpress.com" target=_blank><img src="images/tr_icon.png" width="13%"></a>
+<a href="http://elysiumcollective.bigcartel.com/" target=_blank><img src="images/ill_icon.png" width="13%"></a>
+<a href="http://bowersixd.wordpress.com" target=_blank><img src="images/uiux_icon.png" width="13%"></a>
 </div>
 </body>
 
 <footer>
 <div style="text-align: center">
-  <a href="https://en.wikipedia.org/wiki/Santa_Monica,_California" target=_blank><img src="img/santamonica.png"></a></div>
+  <a href="https://en.wikipedia.org/wiki/Santa_Monica,_California" target=_blank><img src="images/santamonica.png"></a></div>
 
 <div style="text-align: center">
-  <a href="images/devanbowers2015.pdf" target=_blank"><img src="img/cv_icon.png" width="6%"></a>
-  <a href="mailto:dbowers@aphelion.io?subject=Devan Bowers : New Contact" target=_blank><img src="img/em_icon.png" width="6%"></a>
-  <a href="https://instagram.com/dbshreds/" target=_blank><img src="img/in_icon.png" width="6%"></a>
-  <a href="https://www.linkedin.com/in/devanbowers" target=_blank><img src="img/li_icon.png" width="6%"></a>
+  <a href="images/devanbowers2015.pdf" target=_blank"><img src="images/cv_icon.png" width="6%"></a>
+  <a href="mailto:dbowers@aphelion.io?subject=Devan Bowers : New Contact" target=_blank><img src="images/em_icon.png" width="6%"></a>
+  <a href="https://instagram.com/dbshreds/" target=_blank><img src="images/in_icon.png" width="6%"></a>
+  <a href="https://www.linkedin.com/in/devanbowers" target=_blank><img src="images/li_icon.png" width="6%"></a>
 
 </div>
 </footer>
