cleanup css, hover image on uiux

--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6 ie-lt10 ie-lt9 ie-lt8 ie-lt7 no-js" lang="en"><![endif]-->
-<!--[if IE 7 ]><html class="ie ie7 ie-lt10 ie-lt9 ie-lt8 no-js" lang="en"><![endif]-->
-<!--[if IE 8 ]><html class="ie ie8 ie-lt10 ie-lt9 no-js" lang="en"><![endif]-->
-<!--[if IE 9 ]><html class="ie ie9 ie-lt10 no-js" lang="en"><![endif]-->
-<!--[if gt IE 9]><!-->
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <meta name="author" content="">
-  <title>Devan Bowers</title> <!-- website title -->
-
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="">
+    <title>Devan Bowers</title>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/main.js" type="text/javascript"></script>
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
-
-  <link rel="icon" href="images/favicon.jpg"> <!-- website icon -->
-
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"/>
+    <link rel="icon" href="images/favicon.jpg">
 </head>
 
 <body>
 
-<div style="text-align: center"><img src="images/dbowers_main.png" style=width:95%;>
+<div class="center-container">
+    <img class="img-responsive" src="images/dbowers_main.png">
 
+    <div class="row">
+        <div class="col-xs-4"><a href="http://devanbowers.wordpress.com" target=_blank><img class="img-responsive" src="images/tr_icon.png"></a></div>
+        <div class="col-xs-4"><a href="http://elysiumcollective.bigcartel.com/" target=_blank><img class="img-responsive" src="images/ill_icon.png"></a></div>
+        <div class="col-xs-4"><img id="uiux" class="img-responsive" src="images/uiux_icon.png"></div>
+    </div>
 
-<a href="http://devanbowers.wordpress.com" target=_blank><img src="images/tr_icon.png" width="13%"></a>
-<a href="http://elysiumcollective.bigcartel.com/" target=_blank><img src="images/ill_icon.png" width="13%"></a>
-<a href="http://bowersixd.wordpress.com" target=_blank><img src="images/uiux_icon.png" width="13%"></a>
+    <a href="https://en.wikipedia.org/wiki/Santa_Monica,_California" target=_blank><img class="img-responsive" src="images/santamonica.png"></a>
 </div>
+
+<div class="footer-container">
+    <div class="row">
+        <div class="col-xs-3"><a href="images/devanbowers2015.pdf" target=_blank"><img class="img-responsive" src="images/cv_icon.png"></a></div>
+        <div class="col-xs-3"><a href="mailto:dbowers@aphelion.io?subject=Devan Bowers : New Contact" target=_blank><img class="img-responsive" src="images/em_icon.png"></a></div>
+        <div class="col-xs-3"><a href="https://instagram.com/dbshreds/" target=_blank><img class="img-responsive" src="images/in_icon.png"></a></div>
+        <div class="col-xs-3"><a href="https://www.linkedin.com/in/devanbowers" target=_blank><img class="img-responsive" src="images/li_icon.png"></a></div>
+    </div>
+</div>
+
 </body>
-
-<footer>
-<div style="text-align: center">
-  <a href="https://en.wikipedia.org/wiki/Santa_Monica,_California" target=_blank><img src="images/santamonica.png"></a></div>
-
-<div style="text-align: center">
-  <a href="images/devanbowers2015.pdf" target=_blank"><img src="images/cv_icon.png" width="6%"></a>
-  <a href="mailto:dbowers@aphelion.io?subject=Devan Bowers : New Contact" target=_blank><img src="images/em_icon.png" width="6%"></a>
-  <a href="https://instagram.com/dbshreds/" target=_blank><img src="images/in_icon.png" width="6%"></a>
-  <a href="https://www.linkedin.com/in/devanbowers" target=_blank><img src="images/li_icon.png" width="6%"></a>
-
-</div>
-</footer>
+</html>
