move resume to a new resources folder

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
 <div class="footer-container">
     <div class="row">
-        <div class="col-xs-3"><a href="images/devanbowers2015.pdf" target=_blank"><img class="img-responsive" src="images/cv_icon.png"></a></div>
+        <div class="col-xs-3"><a href="resources/devanbowers2015.pdf" target=_blank"><img class="img-responsive" src="images/cv_icon.png"></a></div>
         <div class="col-xs-3"><a href="mailto:dbowers@aphelion.io?subject=Devan Bowers : New Contact" target=_blank><img class="img-responsive" src="images/em_icon.png"></a></div>
         <div class="col-xs-3"><a href="https://instagram.com/dbshreds/" target=_blank><img class="img-responsive" src="images/in_icon.png"></a></div>
         <div class="col-xs-3"><a href="https://www.linkedin.com/in/devanbowers" target=_blank><img class="img-responsive" src="images/li_icon.png"></a></div>
