--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
         <div class="col-xs-4"><img id="uiux" class="img-responsive" src="images/uiux_icon.png"></div>
     </div>
 
-    <a href="https://en.wikipedia.org/wiki/Santa_Monica,_California" target=_blank><img class="img-responsive" src="images/santamonica.png"></a>
+    <a class="santa-monica" href="https://en.wikipedia.org/wiki/Santa_Monica,_California" target=_blank>
+        <img class="img-responsive" src="images/santamonica.png">
+    </a>
 </div>
 
 <div class="footer-container">
