link userport.html and index.html

--- a/public/pages/userport.html
+++ b/public/pages/userport.html
@@ -7,8 +7,8 @@
 <body>
 
 <div align="center">
-    <a href="devanbowers.com"><img class="img-responsive" src="images/home_button.png"></a><P>
-    <img src="images/work_page_temp.png">
+    <a href="../"><img class="img-responsive" src="../images/home_button.png"></a><P>
+    <img src="../images/work_page_temp.png">
 </P>
 </div>
 
