--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <div class="row">
         <div class="col-xs-4"><a href="http://devanbowers.wordpress.com" target=_blank><img class="img-responsive" src="images/tr_icon.png"></a></div>
         <div class="col-xs-4"><a href="http://elysiumcollective.bigcartel.com/" target=_blank><img class="img-responsive" src="images/ill_icon.png"></a></div>
-        <div class="col-xs-4"><img id="uiux" class="img-responsive" src="images/uiux_icon.png"></div>
+        <div class="col-xs-4"><a href="pages/userport.html"><img class="img-responsive" src="images/uiux_icon.png"></a></div>
     </div>
 
     <a class="santa-monica" href="https://en.wikipedia.org/wiki/Santa_Monica,_California" target=_blank>
